--- a/poetry-app/package.json
+++ b/poetry-app/package.json
@@ -12,6 +12,7 @@
     "react-bootstrap": "^1.5.0",
     "react-dom": "^17.0.1",
     "react-drag-drop-container": "^6.1.1",
+    "react-dropdown": "^1.9.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
     "short-id": "^0.1.0-1",
