--- a/poetry-app/package.json
+++ b/poetry-app/package.json
@@ -16,6 +16,7 @@
     "react-dropdown": "^1.9.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
+    "react-select": "^4.3.0",
     "short-id": "^0.1.0-1",
     "web-vitals": "^1.0.1"
   },
